---------------------------------------------------------------------------
Version 1.19.6 (rgerhards), 2007-09-??
- applied patch by varmojfekoj to change signal handling to the new
  sigaction API set (replacing the depreciated signal() calls and its
  friends.
- fixed a bug that in --enable-debug mode caused an assertion when the
  discard action was used
- cleaned up compiler warnings
---------------------------------------------------------------------------
Version 1.19.5 (rgerhards), 2007-09-07
- changed part of the CStr interface so that better error tracking
  is provided and the calling sequence is more intuitive (there were
  invalid calls based on a too-weired interface)
- (hopefully) fixed some remaining bugs rooted in wrong use of 
  the CStr class. These could lead to program abort.
- applied patch by varmojfekoj two fix two potential segfault situations
- added $ModDir config directive
- modified $ModLoad so that an absolute path may be specified as
  module name (e.g. /rsyslog/ommysql.so)
---------------------------------------------------------------------------
Version 1.19.4 (rgerhards/varmojfekoj), 2007-09-04
- fixed a number of small memory leaks - thanks varmojfekoj for patching
- fixed an issue with CString class that could lead to rsyslog abort
  in tplToString() - thanks varmojfekoj for patching
- added a man-version of the config file documenation - thanks to Michel
  Samia for providing the man file
- fixed bug: a template like this causes an infinite loop:
  $template opts,"%programname:::a,b%"
  thanks varmojfekoj for the patch
- fixed bug: case changing options crash freeing the string pointer
  because they modify it: $template opts2,"%programname::1:lowercase%"
  thanks varmojfekoj for the patch
---------------------------------------------------------------------------
Version 1.19.3 (mmeckelein/varmojfekoj), 2007-08-31
- small mem leak fixed (after calling parseSelectorAct) - Thx varmojkekoj